--- a/main.scss
+++ b/main.scss
@@ -307,6 +307,10 @@ img{
     text-align: center;
     font-family: 'roboto_condensedbold_italic';
     text-decoration: none;
+    @media screen and (max-width: 1024px) {
+        display: block;
+        width: 100%;
+    }
 }
 
         //page Menu 1
@@ -328,8 +332,10 @@ img{
     -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
 
     @media screen and (max-width: 1024px){
-        width: 100%;
-        height: auto;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 }        
 h1, h2, .header, .footer{
@@ -373,14 +379,24 @@ h1{
     line-height: 4rem;
     font-size: 2rem;
     padding-top: 4rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .prix{
     text-align: right;
     margin-left: 3rem;
+    @media screen and (max-width: 1024px){
+        margin-left: 1rem;
+    }
 }
 .plat{
     margin-right: 10rem;
     text-align: left;
+    @media screen and (max-width: 1024px){
+        margin-right: 2rem;
+    }
 }
 .footer{
     margin-bottom: 10rem;
@@ -407,11 +423,17 @@ h1{
     box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    @media screen and (max-width: 1024px){
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
-.menu2 > h1{
+.titre_chic{
     background: rgb(146,76,249);
-    background: linear-gradient(325deg, rgba(146,76,249,1) 30%, rgba(224,136,29,1) 93%);
-    background: -moz-linear-gradient(325deg, rgba(146,76,249,1) 30%, rgba(224,136,29,1) 93%);
+    background: linear-gradient(325deg, rgba(146,76,249,1) 20%, rgba(224,136,29,1) 93%);
+    background: -moz-linear-gradient(325deg, rgba(146,76,249,1) 20%, rgba(224,136,29,1) 93%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -421,10 +443,10 @@ h1{
     margin-top: 6rem;
     position: relative;
     cursor: pointer;
+    color: #c67412;
     background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
     transition: background-size 2s;
     background-size: 0% 100%;
-    color: #c67412;
 }
 .plat_appetit{
     display: inline-block;
@@ -434,6 +456,10 @@ h1{
     text-align: left;
     color: #c67412;
     margin-right: 20rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .prix_appetit{
     display: inline-block;
@@ -441,6 +467,10 @@ h1{
     font-size: 2rem;
     padding-top: 4rem;
     color: #c67412;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .titre_papilles{
     text-align: center;
@@ -448,10 +478,10 @@ h1{
     margin-top: 6rem;
     position: relative;
     cursor: pointer;
+    color: #a56799;
     background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
     transition: background-size 2s;
     background-size: 0% 100%;
-    color: #a56799;
 }
 .plat_papilles{
     display: inline-block;
@@ -461,6 +491,10 @@ h1{
     text-align: left;
     margin-right: 4rem;
     color: #a56799;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .prix_papilles{
     display: inline-block;
@@ -468,6 +502,10 @@ h1{
     font-size: 2rem;
     padding-top: 4rem;
     color: #a56799;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .titre_sucrée{
     text-align: center;
@@ -475,10 +513,10 @@ h1{
     margin-top: 6rem;
     position: relative;
     cursor: pointer;
+    color: #6e4ccc;
     background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
     transition: background-size 2s;
     background-size: 0% 100%;
-    color: #6e4ccc;
 }
 .plat_sucrée{
     display: inline-block;
@@ -488,6 +526,13 @@ h1{
     text-align: left;
     margin-right: 22rem;
     color: #6e4ccc;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
+}
+.titre_appetit:hover, .titre_papilles:hover, .titre_sucrée:hover{
+    background-size: 100% 100%;
 }
 
  // page menu 3
@@ -508,6 +553,12 @@ h1{
     box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    @media screen and (max-width: 1024px){
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
 .plat_terminer{
     display: inline-block;
@@ -516,6 +567,10 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 34rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .plat_commencer{
     display: inline-block;
@@ -524,6 +579,10 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 3rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 
 // page menu 4
@@ -543,6 +602,12 @@ h1{
     box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
     -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
+    @media screen and (max-width: 1024px){
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
 .plat_esquisse{
     display: inline-block;
@@ -551,6 +616,10 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 12rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .plat_maître{
     display: inline-block;
@@ -559,6 +628,10 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 2rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .plat_art{
     display: inline-block;
@@ -567,6 +640,10 @@ h1{
     padding-top: 4rem;
     text-align: left;
     margin-right: 4rem;
+    @media screen and (max-width: 1024px){
+        font-size: 0.9rem;
+        display: inline-block;
+    }
 }
 .menu4 > h1{
     color: #34C924;
