--- a/style.css
+++ b/style.css
@@ -409,6 +409,12 @@ img {
   font-family: "roboto_condensedbold_italic";
   text-decoration: none;
 }
+@media screen and (max-width: 1024px) {
+  .acceuil {
+    display: block;
+    width: 100%;
+  }
+}
 
 .menu1 {
   text-align: center;
@@ -428,8 +434,10 @@ img {
 }
 @media screen and (max-width: 1024px) {
   .menu1 {
-    width: 100%;
-    height: auto;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -481,15 +489,31 @@ h1 {
   font-size: 2rem;
   padding-top: 4rem;
 }
+@media screen and (max-width: 1024px) {
+  .plat, .prix {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .prix {
   text-align: right;
   margin-left: 3rem;
 }
+@media screen and (max-width: 1024px) {
+  .prix {
+    margin-left: 1rem;
+  }
+}
 
 .plat {
   margin-right: 10rem;
   text-align: left;
+}
+@media screen and (max-width: 1024px) {
+  .plat {
+    margin-right: 2rem;
+  }
 }
 
 .footer {
@@ -517,11 +541,19 @@ h1 {
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
 }
+@media screen and (max-width: 1024px) {
+  .menu2 {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
 
-.menu2 > h1 {
+.titre_chic {
   background: #924cf9;
-  background: linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
-  background: -moz-linear-gradient(325deg, #924cf9 30%, #e0881d 93%);
+  background: linear-gradient(325deg, #924cf9 20%, #e0881d 93%);
+  background: -moz-linear-gradient(325deg, #924cf9 20%, #e0881d 93%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -532,10 +564,10 @@ h1 {
   margin-top: 6rem;
   position: relative;
   cursor: pointer;
+  color: #c67412;
   background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
   transition: background-size 2s;
   background-size: 0% 100%;
-  color: #c67412;
 }
 
 .plat_appetit {
@@ -547,6 +579,12 @@ h1 {
   color: #c67412;
   margin-right: 20rem;
 }
+@media screen and (max-width: 1024px) {
+  .plat_appetit {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .prix_appetit {
   display: inline-block;
@@ -555,6 +593,12 @@ h1 {
   padding-top: 4rem;
   color: #c67412;
 }
+@media screen and (max-width: 1024px) {
+  .prix_appetit {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .titre_papilles {
   text-align: center;
@@ -562,10 +606,10 @@ h1 {
   margin-top: 6rem;
   position: relative;
   cursor: pointer;
+  color: #a56799;
   background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
   transition: background-size 2s;
   background-size: 0% 100%;
-  color: #a56799;
 }
 
 .plat_papilles {
@@ -577,6 +621,12 @@ h1 {
   margin-right: 4rem;
   color: #a56799;
 }
+@media screen and (max-width: 1024px) {
+  .plat_papilles {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .prix_papilles {
   display: inline-block;
@@ -585,6 +635,12 @@ h1 {
   padding-top: 4rem;
   color: #a56799;
 }
+@media screen and (max-width: 1024px) {
+  .prix_papilles {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .titre_sucrée {
   text-align: center;
@@ -592,10 +648,10 @@ h1 {
   margin-top: 6rem;
   position: relative;
   cursor: pointer;
+  color: #6e4ccc;
   background: linear-gradient(to top, #B71C1C 0%, #B71C1C 10%, transparent 10.01%) no-repeat left bottom/0 100%;
   transition: background-size 2s;
   background-size: 0% 100%;
-  color: #6e4ccc;
 }
 
 .plat_sucrée {
@@ -606,6 +662,16 @@ h1 {
   text-align: left;
   margin-right: 22rem;
   color: #6e4ccc;
+}
+@media screen and (max-width: 1024px) {
+  .plat_sucrée {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
+
+.titre_appetit:hover, .titre_papilles:hover, .titre_sucrée:hover {
+  background-size: 100% 100%;
 }
 
 .menu3 {
@@ -624,6 +690,14 @@ h1 {
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
 }
+@media screen and (max-width: 1024px) {
+  .menu3 {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
 
 .plat_terminer {
   display: inline-block;
@@ -633,6 +707,12 @@ h1 {
   text-align: left;
   margin-right: 34rem;
 }
+@media screen and (max-width: 1024px) {
+  .plat_terminer {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .plat_commencer {
   display: inline-block;
@@ -641,6 +721,12 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 3rem;
+}
+@media screen and (max-width: 1024px) {
+  .plat_commencer {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
 }
 
 .menu4 {
@@ -659,6 +745,14 @@ h1 {
   -moz-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 2px rgba(119, 119, 119, 0.75);
 }
+@media screen and (max-width: 1024px) {
+  .menu4 {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
 
 .plat_esquisse {
   display: inline-block;
@@ -667,6 +761,12 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 12rem;
+}
+@media screen and (max-width: 1024px) {
+  .plat_esquisse {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
 }
 
 .plat_maître {
@@ -677,6 +777,12 @@ h1 {
   text-align: left;
   margin-right: 2rem;
 }
+@media screen and (max-width: 1024px) {
+  .plat_maître {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
+}
 
 .plat_art {
   display: inline-block;
@@ -685,6 +791,12 @@ h1 {
   padding-top: 4rem;
   text-align: left;
   margin-right: 4rem;
+}
+@media screen and (max-width: 1024px) {
+  .plat_art {
+    font-size: 0.9rem;
+    display: inline-block;
+  }
 }
 
 .menu4 > h1 {
